Cleaning up docs/comments